Q341: n叉树